--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
 
   <body>
+     <div style="background: #000000; padding: 10px; text-align: center; font-weight: bold; color: #ffffff;">
+  ⚠️ This is a demo Netflix clone built for educational purposes only. No actual data is collected.
+  </div>
     <div class="main">
+     
+
       <nav>
         <span class="logo">
           <img
