--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Netflix Pakistan - Watch TV Shows Online, Watch Movies Online</title>
+    <title>Watchit 
+      
+    </title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
